# knowledge-base-agent

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  README.md  commands.md  pyproject.toml
docs/: INTERVIEW_PROFILE_DESIGN.md  ITERATION.md  LIBRARIAN_READ_TOOLS_DESIGN.md  MEMORY_ARCHITECTURE.md  MEMORY_CHARTER.md  MEMORY_INJECTION.md  MEMORY_MODEL_REDESIGN.md  MEMORY_SCHEMA_MIGRATION.md  MEMORY_WRITE_CONSOLIDATION.md  OBSIDIAN_WORKFLOW.md  PHASE5_QA_AGENT_DESIGN.md  TROUBLESHOOTING.md  TROUBLESOLVING.md  agent_plans.md
eval/: query_rewrite_eval.json  rag_eval.json
eval-results/: _compare_dependency_failure_smoke.md  _compare_dependency_smoke.md  _compare_smoke.md  _env_dashscope_test.md  chunk-stats-after-code-atomic.md  chunk-stats-current.md  compare-after-incremental.md  compare-code-atomic-baseline.md  compare-code-atomic-rerank.md  compare-low-value-merge-baseline.md  compare-low-value-merge-rerank.md  movement-hybrid-vs-qwen3-textbook-v2.md  movement-hybrid-vs-qwen3-textbook.md
scripts/: agent_answer_debug.py  agent_debug.py  agent_eval.py  analyze_rerank_movement.py  chunk_stats.py  convert_documents.py  download_vault_data.py  embed_debug.py  faiss_benchmark.py  mineru_agent_extract.py  query_plan_debug.py  query_rewrite_debug.py  rag_answer_debug.py  rag_compare.py  rag_compare_dependency.py  rag_debug.py  rag_eval.py  rrf_k_sweep.py  token_debug.py  web_search.py  wiki_debug.py  workflow_debug.py  workspace_sync.py
tests/: test_agent_action_runs.py  test_agent_answer_scope.py  test_agent_run_stream.py  test_agent_runtime.py  test_data_paths.py  (+25 more)
(+149 files in other folders)
