[project]
name = "knowledge-agent"
version = "0.1.0"
description = "Local Obsidian vault audit tool"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.96.1",
    "fastapi>=0.115.0",
    "mineru-open-sdk>=0.2.5",
    "pymupdf4llm>=1.27.2.3",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.30.0",
]

[project.scripts]
knowledge-agent = "knowledge_base_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
